Updating .tex file

--- a/paper.tex
+++ b/paper.tex
@@ -194,7 +194,8 @@ Solving for $\lambda$ in the first equation and substituting in the second we ge
 
 Solving the second equation gives us $a=0$ and $9b^2-a^2=0$. $a=0$ is not in out domain. Solving for $b$ gives us $b=\pm \frac{a}{3}$.
 Now, we solve the third equation for $a$ and obtain $a=\pm 3\sqrt{2}$.\\
-For $a=\pm 3\sqrt{2}$ and $b=\pm \frac{a}{3}$ we get the following choices of $(a,b)$: $(3\sqrt{2}, \sqrt{2}), (3\sqrt{2}, -\sqrt{2}), (-3\sqrt{2}, \sqrt{2}), (-3\sqrt{2}, -\sqrt{2})$.
+For $a=\pm 3\sqrt{2}$ and $b=\pm \frac{a}{3}$ we get the following choices of $(a,b)$: $(3\sqrt{2}, \sqrt{2}),\\
+(3\sqrt{2}, -\sqrt{2}), (-3\sqrt{2}, \sqrt{2}), (-3\sqrt{2}, -\sqrt{2})$.
 Since we are interested in $a,b>0$ the only choice is $(3\sqrt{2}, \sqrt{2})$. 
 
 \begin{figure}[h]
